...

                case .memory:
                    cell.textLabel?.text = "内存使用超限制"
                    break

                case .cpu:
                    cell.textLabel?.text = "CPU使用超限制"
                    break

                case .abort:
                    cell.textLabel?.text = "使用abort()制造闪退"
                    break

                case .none:
                    cell.textLabel?.text = "等待手动退出"
                    break
            }
        }

        return cell
    }
...
