...
                        <sections/>
                        <connections>
                            <outlet property="dataSource" destination="0Kw-KW-J49" id="pCv-XL-QES"/>
                            <outlet property="delegate" destination="0Kw-KW-J49" id="ksd-qa-zxX"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="测试列表" id="53U-gv-3s7"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="6KU-45-1aM" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="349.60000000000002" y="217.24137931034485"/>
        </scene>
        <!--hello-->
...
